landing page updates 4

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ website:
   site-url: https://swhawes.github.io/test/
   page-navigation: true
   navbar:
-    background: darkslateblue #slategray #primary #goldenrod
+    background: lavender #slategray #primary #goldenrod
     search: true
     pinned: true
     collapsed: true
